client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
.root {
  display: block;
  margin-bottom: 1em;
}

.access {
  text-transform: capitalize;
}

.user-search {
  margin-bottom: 1em;
}

.member-action {
  display: flex;
  align-items: center;
  h6 {
    margin-bottom: 0;
    /* NOTE: Table cell content should be 14px like this cell button */
    font-size: 14px;
  }
}

.printed-name {
  font-weight: bold;
}

.member-search-group {
  width: 70%;
}

.member-search {
  margin-bottom: 1em;
  font-size: 12px !important;
}

.addremove-list {
  /* title */
  th:nth-child(1),
  td:nth-child(1) {
    width: 60%;
  }
  /* owner */
  th:nth-child(2),
  td:nth-child(2) {
    width: 20%;
  } /* owner */
  th:nth-child(3),
  td:nth-child(3) {
    width: 20%;
  }
}

.transfer-list {
  /* owner */
  th:nth-child(1),
  td:nth-child(1) {
    width: 50%;
  }
  /* confirmation */
  th:nth-child(2),
  td:nth-child(2) {
    width: 50%;
  }
}

.confirm-controls {
  display: flex;
  width: 100%;
  justify-content: flex-end;
  align-items: center;
}

.confirm-controls > * {
  margin-left: 1em;
}

.ownership-button {
  height: 18.88px;
  border-radius: 0;
  background-color: #f4f4f4;
  color: #707070;
  border: 1px solid #afafaf;
  padding: 2px 8px;
  font-size: 12px !important;
  display: flex;
  align-items: center;
}

.add-button {
  composes: c-button--secondary from '../../../styles/components/c-button.css';
}

